# Prymate

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  prerequisites-web.py  pyproject.toml  requirements.txt  vite.config.js
examples/: README.md
src/prymate/: __init__.py  ast.py  builtins.py  console.py  evaluator.py  objects.py  parser.py  scanner.py  token.py
src/prymate-web/: main.js  python.worker.js
src/prymate/ast/: ast.py
src/prymate/console/: run.py
src/prymate/evaluator/: evaluator.py
src/prymate/lexer/: lexer.py
src/prymate/parser/: parser.py
src/prymate/repl/: repl.py
tests/: evaluator_test.py  lexer_test.py  objects_test.py  parser_test.py  scanner_test.py
