[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[project]
name = "prymate"
version = "0.5.0"
license = "MIT"
description = "A Monkey programming language interpreter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
prymate = "prymate.console:main"

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]
